# final

./: README.md  pyproject.toml  影像處理.pptx
src/: clean_data.py  collect_data.py  crawler_example.py  cuda_test.py  train_model.py
