[project]
name = "cnn-captcha-break"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imutils>=0.5.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "ruff>=0.11.11",
    "selenium>=4.33.0",
    "tqdm>=4.67.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "onnx>=1.18.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
